--- a/generate_library/requirements.txt
+++ b/generate_library/requirements.txt
@@ -1,7 +1,7 @@
-pandas
-molmass
-numpy
-scipy
-matplotlib
-pyteomics
-msbuddy
+matplotlib==3.7.3
+molmass==2023.4.10
+msbuddy==0.3.7
+numpy==1.24.4
+pandas==2.0.3
+pyteomics==4.6.2
+scipy==1.10.1
